[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/KinematicHeart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Spamton/Spamton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Attacks/Phase2/CashAttack/cash_attack.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Spamton:global_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5, 1.5, 2 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 482, 161 ), Vector2( 384, 161 ), Vector2( 595, 161 ), Vector2( 482, 161 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "jump_on_area"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Spamton:global_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 782, 428 ), Vector2( 627, 92 ), Vector2( 482, 161 ) ]
}

[node name="CashAttack" type="Node2D"]
script = ExtResource( 3 )

[node name="Spamton" parent="." instance=ExtResource( 2 )]
position = Vector2( 782, 428 )

[node name="DollarSpawn" type="Node2D" parent="Spamton"]
position = Vector2( -45, -24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/jump_on_area = SubResource( 2 )

[node name="DollarTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="KinematicHeart" parent="." instance=ExtResource( 1 )]
position = Vector2( 526, 256 )

[connection signal="timeout" from="DollarTimer" to="." method="_on_DollarTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
